--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "main": "HandleBarHelpers.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon InvoiceEmailTemplate.js --ext js,hbs"
+    "dev:invoice": "nodemon InvoiceReminders/InvoiceEmail.js --ext js",
+    "dev:callSummary": "nodemon InternalReminders/CallSummary.js --ext js",
+    "dev:secondFailedCall": "nodemon ClientReminders/SecondFailedCall.js --ext js",
+    "dev:thirdFailedCall": "nodemon InternalReminders/ThirdFailedCall.js --ext js",
+    "dev:HighRisk": "nodemon InternalReminders/HighRiskOverdue.js --ext js",
+    "dev:PaymentCheck": "nodemon ClientReminders/PaymentCheck.js --ext js",
+    "dev:InternalReminders": "nodemon InternalReminders/CheckPausedInvoices.js --ext js"
   },
   "keywords": [],
   "author": "",
